chore/implement adjustments
